--- a/index.html
+++ b/index.html
@@ -546,9 +546,9 @@
                     <label class="label">
                         <input class="input-footer" type="email" name="email" placeholder="E-mail">
                     </label>               
-                </form>
-                
+                </form>               
             </div>
+
             <button class="button-footer" type="submit">Subscribe
                 <svg class="icon-telegram" width="24" height="24">
                     <use href="./images/icons.svg#icon-Frame-3"></use>
@@ -558,7 +558,7 @@
         </div>
     </footer>
 
-    <!-- <div class="backdrop is-open">
+    <div class="backdrop">
         <div class="modal">
             <button type="button" class="modal-close">
                 <svg class="icon-cross" width="8" height="8">
@@ -605,16 +605,18 @@
                 <div class="check-container">
                     <input class="checkbox-field visually-hidden" type="checkbox" name="user-privacy" id="user-privacy" value="true">
                     <label class="check-label" for="user-privacy">
-                        <span class="check-element">
-                            <svg class="icon-check" width="10" height="8">
-                                <use href="./images/icons.svg#icon-check"></use>
-                            </svg>
-                        </span>I accept the terms and conditions of the&nbsp;<a class="label-link" href="">Privacy Policy</a></label>
+                            <span class="check-element">
+                                <svg class="icon-check" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-check"></use>
+                                </svg>
+                            </span>
+                            <span>I accept the terms and conditions of the&nbsp;<a class="label-link" href="">Privacy Policy</a></span>
+                    </label>
                 </div>
                 
                 <button type="submit" class="button-submit">Send</button>
             </form>
         </div>
-    </div> -->
+    </div>
 </body>
 </html>
