--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 </ul>
             </div>
         </div>
-        <script src="./menu.js"></script>
+        <script src="../js/menu.js"></script>
     </header>     
 
     <main> 
@@ -545,22 +545,21 @@
                 <form class="subscribe-form">
                     <label class="label">
                         <input class="input-footer" type="email" name="email" placeholder="E-mail">
-                    </label>               
-                </form>               
+                    </label>
+                    <button class="button-footer" type="submit" data-modal-open>Subscribe
+                        <svg class="icon-telegram" width="24" height="24">
+                            <use href="./images/icons.svg#icon-Frame-3"></use>
+                        </svg>
+                    </button>
+                </form>
             </div>
-
-            <button class="button-footer" type="submit">Subscribe
-                <svg class="icon-telegram" width="24" height="24">
-                    <use href="./images/icons.svg#icon-Frame-3"></use>
-                </svg>
-            </button>
             
         </div>
     </footer>
 
-    <div class="backdrop">
+    <div class="backdrop" data-modal>
         <div class="modal">
-            <button type="button" class="modal-close">
+            <button type="button" class="modal-close" data-modal-close>
                 <svg class="icon-cross" width="8" height="8">
                     <use href="./images/icons.svg#icon-cross"></use>
                 </svg>
@@ -618,5 +617,7 @@
             </form>
         </div>
     </div>
+
+    <script src="../js/modal.js"></script>
 </body>
 </html>
