--- a/index.html
+++ b/index.html
@@ -100,14 +100,13 @@
                 </ul>
             </div>
         </div>
-        <script src="../js/menu.js"></script>
     </header>     
 
     <main> 
         <section class="section-one">
             <div class="container">
                 <h1 class="title-one">Effective Solutions for Your Business</h1>
-                <button class="button" type="button">Order Service</button>
+                <button class="button" type="button" data-modal-open>Order Service</button>
             </div>
         </section>
 
@@ -159,7 +158,7 @@
         </section>
 
         <section class="section-three">
-            <div class="container">
+            <div class="container team-container">
                 <h2 class="title-two">Our Team</h2>
                 <ul class="list-section-three team-list">        
                     <li class="list-item-three">
@@ -202,7 +201,6 @@
                                 </li>
                             </ul>
                         </div>
-
                     </li>
                             
                     <li class="list-item-three">
@@ -546,7 +544,7 @@
                     <label class="label">
                         <input class="input-footer" type="email" name="email" placeholder="E-mail">
                     </label>
-                    <button class="button-footer" type="submit" data-modal-open>Subscribe
+                    <button class="button-footer" type="submit">Subscribe
                         <svg class="icon-telegram" width="24" height="24">
                             <use href="./images/icons.svg#icon-Frame-3"></use>
                         </svg>
@@ -617,7 +615,7 @@
             </form>
         </div>
     </div>
-
-    <script src="../js/modal.js"></script>
+    <script type="module" src="../js/menu.js"></script>
+    <script type="module" src="../js/modal.js"></script>
 </body>
 </html>
