--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@
             </form>
         </div>
     </div>
-    <script type="module" src="../js/menu.js"></script>
-    <script type="module" src="../js/modal.js"></script>
+    <script src="./js/menu.js"></script>
+    <script src="./js/modal.js"></script>
 </body>
 </html>
